mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            memory: "128Mi"
        ports:
        - containerPort: 1883
        volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: pwdfile
              mountPath: /mosquitto/config/passwordfile/
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
        - name: pwdfile
          secret:
            secretName: mosquitto-passwordfile
