mqtt/tcpIngress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutemosquitto

spec:
  entryPoints:
    - web 
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mosquitto
      port: 1883
      weight: 10
      terminationDelay: 400
